# tech-prog-6

./: CMakeLists.txt  README.md  example.py  idw_with_cpp_lib.ipynb  setup.py
.cache/clangd/index/: example.cpp.FB10602A96022438.idx  idw.cpp.D6D21021FFBEA670.idx
pybind_eigen_example.egg-info/: top_level.txt
source/: CMakeLists.txt  idw.cpp
